--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
     <div class="card">
       <p>Email: <a href="mailto:hunterbiersdorff@gmail.com">hunterbiersdorff@gmail.com</a></p>
       <p>Phone: 408-466-4031</p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/YOURUSERNAME" target="_blank">linkedin.com/in/YOURUSERNAME</a></p>
-      <p>GitHub: <a href="https://github.com/YOURUSERNAME" target="_blank">github.com/YOURUSERNAME</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/hunterbiersdorff" target="_blank">linkedin.com/in/YOURUSERNAME</a></p>
+      <p>GitHub: <a href="https://github.com/Hunterb905" target="_blank">github.com/YOURUSERNAME</a></p>
     </div>
   </section>
 
