--- a/index.html
+++ b/index.html
@@ -1,78 +1,126 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hunter Biersdorff | Portfolio</title>
   <style>
-    html {
-      scroll-behavior: smooth;
+    :root {
+      --primary: #0a0a0a;
+      --accent: #0071e3;
+      --background: #ffffff;
+      --text: #1d1d1f;
+      --gray: #6e6e73;
     }
-    body {
-      font-family: 'Segoe UI', sans-serif;
+
+    * {
+      box-sizing: border-box;
       margin: 0;
-      background: #f9fafb;
-      color: #1f2937;
+      padding: 0;
     }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: var(--background);
+      color: var(--text);
+      line-height: 1.6;
+    }
+
     header {
-      background: linear-gradient(135deg, #6366f1, #8b5cf6);
-      padding: 2rem;
-      color: white;
+      background: var(--background);
+      padding: 2rem 1rem;
       text-align: center;
+      border-bottom: 1px solid #e5e5e5;
     }
+
+    header h1 {
+      font-size: 2.5rem;
+      font-weight: 600;
+    }
+
+    header p {
+      color: var(--gray);
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+    }
+
     nav {
-      margin-top: 1rem;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin-top: 2rem;
     }
+
     nav a {
-      margin: 0 1rem;
-      color: white;
       text-decoration: none;
+      color: var(--text);
       font-weight: 500;
+      padding: 0.5rem 0;
+      border-bottom: 2px solid transparent;
+      transition: all 0.2s ease;
     }
+
     nav a:hover {
-      text-decoration: underline;
+      border-bottom: 2px solid var(--accent);
+      color: var(--accent);
     }
+
     section {
-      padding: 3rem 1rem;
       max-width: 900px;
-      margin: auto;
+      margin: 4rem auto;
+      padding: 0 1rem;
     }
+
     .section-title {
-      font-size: 2.2rem;
-      margin-bottom: 1rem;
+      font-size: 2rem;
+      font-weight: 600;
       text-align: center;
-      color: #4f46e5;
-    }
-    .card {
-      background: white;
-      border-radius: 12px;
-      padding: 1.5rem;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
       margin-bottom: 2rem;
-      transition: transform 0.2s ease;
     }
+
+    .card {
+      background: #f9f9f9;
+      border-radius: 16px;
+      padding: 2rem;
+      margin-bottom: 2rem;
+      transition: all 0.3s ease;
+    }
+
     .card:hover {
-      transform: translateY(-5px);
+      transform: translateY(-3px);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
     }
-    footer {
-      background-color: #1f2937;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 3rem;
-    }
-    a.button {
+
+    .button {
       display: inline-block;
-      background-color: #6366f1;
+      background: var(--accent);
       color: white;
-      padding: 0.6rem 1.2rem;
-      border-radius: 6px;
       text-decoration: none;
+      padding: 0.8rem 1.5rem;
+      border-radius: 8px;
       margin-top: 1rem;
       font-weight: 600;
-      transition: background-color 0.2s ease;
+      transition: background 0.2s ease;
     }
-    a.button:hover {
-      background-color: #4f46e5;
+
+    .button:hover {
+      background: #005bb5;
+    }
+
+    footer {
+      background: #f5f5f7;
+      color: var(--gray);
+      text-align: center;
+      padding: 2rem 1rem;
+      font-size: 0.9rem;
+      border-top: 1px solid #e5e5e5;
+    }
+
+    @media (max-width: 600px) {
+      nav {
+        flex-direction: column;
+        gap: 1rem;
+      }
     }
   </style>
 </head>
@@ -80,10 +128,10 @@
 
   <header>
     <h1>Hunter Biersdorff</h1>
-    <p>Support Engineer | Problem Solver | Tech Enthusiast</p>
+    <p>Technical Support Engineer | Driven by Clarity and Curiosity</p>
     <nav>
       <a href="#about">About</a>
-      <a href="#portfolio">Portfolio</a>
+      <a href="#projects">Projects</a>
       <a href="#resume">Resume</a>
       <a href="#contact">Contact</a>
     </nav>
@@ -92,29 +140,29 @@
   <section id="about">
     <h2 class="section-title">About Me</h2>
     <div class="card">
-      <p>Hi, I'm Hunter — a dedicated technical support engineer with a passion for problem-solving and clear communication. I bring a customer-first mindset and technical skills to every challenge I take on.</p>
+      <p>I’m a support engineer passionate about solving problems, helping people, and building simple solutions to complex challenges. I blend empathy and technical know-how to create outstanding customer experiences — and I’m always ready to learn more.</p>
     </div>
   </section>
 
-  <section id="portfolio">
-    <h2 class="section-title">Portfolio</h2>
+  <section id="projects">
+    <h2 class="section-title">Projects</h2>
     <div class="card">
-      <h3>⚙️ Tech Troubleshooter</h3>
-      <p>Tool that helped automate ticket triage using custom filters and simple AI logic.</p>
-      <a href="https://github.com/YOURUSERNAME/project-one" target="_blank" class="button">View Project</a>
+      <h3>🚀 Triage Bot</h3>
+      <p>An automated support ticket filter that uses keyword logic to categorize incoming requests. Built using JavaScript and integrated into ServiceNow workflows.</p>
+      <a href="https://github.com/YOURUSERNAME/project-1" class="button" target="_blank">View Project</a>
     </div>
     <div class="card">
-      <h3>📊 Data Dashboard</h3>
-      <p>A simple dashboard pulling real-time metrics using JavaScript and Chart.js.</p>
-      <a href="https://github.com/YOURUSERNAME/project-two" target="_blank" class="button">View Project</a>
+      <h3>📈 Support Dashboard</h3>
+      <p>A lightweight dashboard showing real-time support metrics using Chart.js and a REST API.</p>
+      <a href="https://github.com/YOURUSERNAME/project-2" class="button" target="_blank">View Project</a>
     </div>
   </section>
 
   <section id="resume">
     <h2 class="section-title">Resume</h2>
     <div class="card">
-      <p>You can download or view my resume below:</p>
-      <a href="assets/resume.pdf" target="_blank" class="button">View Resume (PDF)</a>
+      <p>View or download my latest resume for a detailed breakdown of my experience and skills.</p>
+      <a href="assets/resume.pdf" class="button" target="_blank">Download Resume</a>
     </div>
   </section>
 
@@ -129,7 +177,7 @@
   </section>
 
   <footer>
-    © 2025 Hunter Biersdorff • Built with 💻 and ☕
+    © 2025 Hunter Biersdorff — Designed with focus & flow.
   </footer>
 
 </body>
