--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,45 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Projects | Hunter Biersdorff</title>
+  <style>
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 0; background: #fff; color: #1d1d1f; }
+    header, footer { text-align: center; padding: 2rem 1rem; }
+    nav a { margin: 0 1rem; text-decoration: none; color: #1d1d1f; border-bottom: 2px solid transparent; padding-bottom: 2px; }
+    nav a:hover { border-color: #0071e3; }
+    main { max-width: 900px; margin: 3rem auto; padding: 0 1rem; }
+    .card { padding: 1.5rem; background: #f8f8f8; border-radius: 12px; margin-bottom: 2rem; box-shadow: 0 5px 15px rgba(0,0,0,0.05); }
+    h2 { font-size: 1.5rem; margin-bottom: 0.5rem; }
+    p { color: #555; }
+    a.button { display: inline-block; margin-top: 1rem; padding: 0.5rem 1.2rem; background: #0071e3; color: #fff; border-radius: 6px; text-decoration: none; font-weight: 500; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Projects</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="resume.html">Resume</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <div class="card">
+      <h2>Triage Bot</h2>
+      <p>An automated tool that filters and tags support tickets using simple rule logic. Created in JavaScript with ServiceNow API integrations.</p>
+      <a class="button" href="https://github.com/YOURUSERNAME/project-1" target="_blank">View on GitHub</a>
+    </div>
+    <div class="card">
+      <h2>Support Metrics Dashboard</h2>
+      <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
+      <a class="button" href="https://github.com/YOURUSERNAME/project-2" target="_blank">View on GitHub</a>
+    </div>
+  </main>
+  <footer>
+    © 2025 Hunter Biersdorff
+  </footer>
+</body>
+</html>
