--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Resume | Hunter Biersdorff</title>
+  <style>
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 0; background: #fff; color: #1d1d1f; }
+    header, footer { text-align: center; padding: 2rem 1rem; }
+    nav a { margin: 0 1rem; text-decoration: none; color: #1d1d1f; border-bottom: 2px solid transparent; padding-bottom: 2px; }
+    nav a:hover { border-color: #0071e3; }
+    main { text-align: center; padding: 4rem 1rem; }
+    a.button { padding: 0.8rem 1.5rem; background: #0071e3; color: white; text-decoration: none; border-radius: 6px; font-weight: 500; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Resume</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <p>You can download or view my resume below.</p>
+    <a class="button" href="assets/resume.pdf" target="_blank">Download Resume</a>
+  </main>
+  <footer>
+    © 2025 Hunter Biersdorff
+  </footer>
+</body>
+</html>
