--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,149 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact | Hunter Biersdorff</title>
   <style>
-    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 0; background: #fff; color: #1d1d1f; }
-    header, footer { text-align: center; padding: 2rem 1rem; }
-    nav a { margin: 0 1rem; text-decoration: none; color: #1d1d1f; border-bottom: 2px solid transparent; padding-bottom: 2px; }
-    nav a:hover { border-color: #0071e3; }
-    main { max-width: 700px; margin: 3rem auto; padding: 0 1rem; }
-    h2 { font-size: 1.3rem; margin-bottom: 0.5rem; }
-    p a { color: #0071e3; text-decoration: none; }
+    /* General Reset and Body Styles */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background-color: #ffffff;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    /* Header and Navigation */
+    header {
+      background-color: #ffffff;
+      padding: 2rem 1rem;
+      text-align: center;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: #1d1d1f;
+      margin-bottom: 1rem;
+    }
+
+    nav {
+      margin-top: 1rem;
+    }
+
+    nav a {
+      margin: 0 1rem;
+      text-decoration: none;
+      color: #1d1d1f;
+      font-weight: 500;
+      padding-bottom: 2px;
+      border-bottom: 2px solid transparent;
+      transition: border-color 0.3s ease;
+    }
+
+    nav a:hover {
+      border-color: #0071e3;
+    }
+
+    /* Main Section Styles */
+    main {
+      max-width: 1200px;
+      margin: 2rem auto;
+      padding: 0 2rem;
+      text-align: center;
+    }
+
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      color: #0071e3;
+    }
+
+    p {
+      color: #555;
+      font-size: 1.1rem;
+      margin-bottom: 1.5rem;
+    }
+
+    /* Contact Form */
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1.2rem;
+      max-width: 600px;
+      margin: 2rem auto;
+      padding: 2rem;
+      background-color: #f9f9f9;
+      border-radius: 8px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    }
+
+    form input, form textarea {
+      padding: 1rem;
+      font-size: 1rem;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      outline: none;
+    }
+
+    form input:focus, form textarea:focus {
+      border-color: #0071e3;
+    }
+
+    form button {
+      padding: 1rem;
+      background-color: #0071e3;
+      color: white;
+      font-size: 1.1rem;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    form button:hover {
+      background-color: #005bb5;
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      font-size: 1rem;
+      color: #888;
+      padding: 2rem 1rem;
+      background-color: #f9f9f9;
+    }
+
+    footer a {
+      color: #0071e3;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 2rem;
+      }
+
+      nav a {
+        margin: 0 0.5rem;
+      }
+
+      main {
+        padding: 0 1rem;
+      }
+
+      form {
+        padding: 1.5rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -25,17 +161,19 @@
     </nav>
   </header>
   <main>
-    <h2>Email</h2>
-    <p><a href="mailto:hunterbiersdorff@gmail.com">hunterbiersdorff@gmail.com</a></p>
+    <h2>Send me a Message</h2>
+    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+      <label for="name">Your Name</label>
+      <input type="text" id="name" name="name" required />
 
-    <h2>Phone</h2>
-    <p>408-466-4031</p>
+      <label for="email">Your Email</label>
+      <input type="email" id="email" name="email" required />
 
-    <h2>LinkedIn</h2>
-    <p><a href="https://linkedin.com/in/YOURUSERNAME" target="_blank">linkedin.com/in/YOURUSERNAME</a></p>
+      <label for="message">Your Message</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
 
-    <h2>GitHub</h2>
-    <p><a href="https://github.com/YOURUSERNAME" target="_blank">github.com/YOURUSERNAME</a></p>
+      <button type="submit">Send Message</button>
+    </form>
   </main>
   <footer>
     © 2025 Hunter Biersdorff
