--- a/index.html
+++ b/index.html
@@ -2,19 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hunter Biersdorff</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Home | Hunter Biersdorff</title>
   <style>
-    body {
+    /* General Reset and Body Styles */
+    * {
       margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background: #ffffff;
-      color: #1d1d1f;
+      padding: 0;
+      box-sizing: border-box;
     }
 
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background-color: #ffffff;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    /* Header and Navigation */
     header {
+      background-color: #ffffff;
+      padding: 2rem 1rem;
       text-align: center;
-      padding: 3rem 1rem 2rem;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: #1d1d1f;
+      margin-bottom: 1rem;
     }
 
     nav {
@@ -28,17 +45,39 @@
       font-weight: 500;
       padding-bottom: 2px;
       border-bottom: 2px solid transparent;
+      transition: border-color 0.3s ease;
     }
 
     nav a:hover {
       border-color: #0071e3;
     }
 
+    /* Main Section Styles */
+    main {
+      max-width: 1200px;
+      margin: 2rem auto;
+      padding: 0 2rem;
+      text-align: center;
+    }
+
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      color: #0071e3;
+    }
+
+    p {
+      color: #555;
+      font-size: 1.1rem;
+      margin-bottom: 1.5rem;
+    }
+
+    /* Profile and Bio */
     .profile {
       max-width: 800px;
       margin: 3rem auto;
-      text-align: center;
       padding: 0 1rem;
+      text-align: center;
     }
 
     .profile img {
@@ -55,39 +94,74 @@
     }
 
     .profile p {
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       color: #555;
     }
 
+    /* Footer */
     footer {
       text-align: center;
+      font-size: 1rem;
       color: #888;
       padding: 2rem 1rem;
-      font-size: 0.9rem;
+      background-color: #f9f9f9;
+    }
+
+    footer a {
+      color: #0071e3;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 2rem;
+      }
+
+      nav a {
+        margin: 0 0.5rem;
+      }
+
+      .profile img {
+        width: 150px;
+        height: 150px;
+      }
+
+      .profile h1 {
+        font-size: 1.5rem;
+      }
+
+      main {
+        padding: 0 1rem;
+      }
     }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>Hunter Biersdorff</h1>
+    <h1>Welcome to My Portfolio</h1>
     <nav>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-
-  <div class="profile">
-    <img src="assets/photo.jpg" alt="Hunter Biersdorff">
-    <h1>Hello! I'm Hunter</h1>
-    <p>A technical support engineer with a passion for problem-solving, communication, and clean tech.</p>
-  </div>
-
+  <main>
+    <div class="profile">
+      <img src="assets/photo.jpg" alt="Hunter Biersdorff" />
+      <h1>Hunter Biersdorff</h1>
+      <p>Welcome to my personal website! I'm a Software Engineer passionate about building great products and solving complex problems. Feel free to browse through my work and learn more about me.</p>
+      <a href="resume.html" class="btn">View My Resume</a>
+    </div>
+  </main>
   <footer>
-    © 2025 Hunter Biersdorff — Built with HTML & style.
+    <p>© 2025 Hunter Biersdorff | <a href="mailto:hunterbiersdorff@gmail.com">Email me</a></p>
   </footer>
-
 </body>
 </html>
