--- a/resume.html
+++ b/resume.html
@@ -5,17 +5,110 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Resume | Hunter Biersdorff</title>
   <style>
-    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 0; background: #fff; color: #1d1d1f; }
-    header, footer { text-align: center; padding: 2rem 1rem; }
-    nav a { margin: 0 1rem; text-decoration: none; color: #1d1d1f; border-bottom: 2px solid transparent; padding-bottom: 2px; }
-    nav a:hover { border-color: #0071e3; }
-    main { text-align: center; padding: 4rem 1rem; }
-    a.button { padding: 0.8rem 1.5rem; background: #0071e3; color: white; text-decoration: none; border-radius: 6px; font-weight: 500; }
+    /* General Reset and Body Styles */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background-color: #ffffff;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    /* Header and Navigation */
+    header {
+      background-color: #ffffff;
+      padding: 2rem 1rem;
+      text-align: center;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: #1d1d1f;
+      margin-bottom: 1rem;
+    }
+
+    nav {
+      margin-top: 1rem;
+    }
+
+    nav a {
+      margin: 0 1rem;
+      text-decoration: none;
+      color: #1d1d1f;
+      font-weight: 500;
+      padding-bottom: 2px;
+      border-bottom: 2px solid transparent;
+      transition: border-color 0.3s ease;
+    }
+
+    nav a:hover {
+      border-color: #0071e3;
+    }
+
+    /* Main Section Styles */
+    main {
+      max-width: 1200px;
+      margin: 2rem auto;
+      padding: 0 2rem;
+      text-align: center;
+    }
+
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      color: #0071e3;
+    }
+
+    .resume-content {
+      max-width: 900px;
+      margin: 3rem auto;
+      text-align: center;
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      font-size: 1rem;
+      color: #888;
+      padding: 2rem 1rem;
+      background-color: #f9f9f9;
+    }
+
+    footer a {
+      color: #0071e3;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 2rem;
+      }
+
+      nav a {
+        margin: 0 0.5rem;
+      }
+
+      main {
+        padding: 0 1rem;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>Resume</h1>
+    <h1>My Resume</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -23,12 +116,26 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
-    <p>You can download or view my resume below.</p>
-    <a class="button" href="assets/resume.pdf" target="_blank">Download Resume</a>
+    <div class="resume-content">
+      <h2>Download or View My Resume</h2>
+      
+      <!-- Download Link for Resume -->
+      <a href="assets/Biersdorff.Hunter.pdf" download class="btn" style="font-size: 1.1rem; text-decoration: none; background-color: #0071e3; color: white; padding: 10px 20px; border-radius: 5px;">Download My Resume</a>
+
+      <br><br>
+
+      <!-- Embed PDF Resume -->
+      <h3>View My Resume Below:</h3>
+      <iframe src="assets/Biersdorff.Hunter.pdf" width="100%" height="600px">
+        This browser does not support PDF viewing. Please <a href="assets/Biersdorff.Hunter.pdf" download>download the resume</a> instead.
+      </iframe>
+    </div>
   </main>
+
   <footer>
-    © 2025 Hunter Biersdorff
+    <p>© 2025 Hunter Biersdorff | <a href="mailto:hunterbiersdorff@gmail.com">Email me</a></p>
   </footer>
 </body>
 </html>
