--- a/resume.html
+++ b/resume.html
@@ -128,7 +128,7 @@
 
       <!-- Embed PDF Resume -->
       <h3>View My Resume Below:</h3>
-      <iframe src="assets/Biersdorff.Hunter.pdf" width="100%" height="600px">
+      <iframe src="Assets/Biersdorff.Hunter.pdf" width="100%" height="600px">
         This browser does not support PDF viewing. Please <a href="assets/Biersdorff.Hunter.pdf" download>download the resume</a> instead.
       </iframe>
     </div>
