--- a/resume.html
+++ b/resume.html
@@ -122,14 +122,14 @@
       <h2>Download or View My Resume</h2>
       
       <!-- Download Link for Resume -->
-      <a href="assets/Biersdorff.Hunter.pdf" download class="btn" style="font-size: 1.1rem; text-decoration: none; background-color: #0071e3; color: white; padding: 10px 20px; border-radius: 5px;">Download My Resume</a>
+      <a href="Assets/Biersdorff.Hunter.pdf" download class="btn" style="font-size: 1.1rem; text-decoration: none; background-color: #0071e3; color: white; padding: 10px 20px; border-radius: 5px;">Download My Resume</a>
 
       <br><br>
 
       <!-- Embed PDF Resume -->
       <h3>View My Resume Below:</h3>
       <iframe src="Assets/Biersdorff.Hunter.pdf" width="100%" height="600px">
-        This browser does not support PDF viewing. Please <a href="assets/Biersdorff.Hunter.pdf" download>download the resume</a> instead.
+        This browser does not support PDF viewing. Please <a href="Assets/Biersdorff.Hunter.pdf" download>download the resume</a> instead.
       </iframe>
     </div>
   </main>
