--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
     <div class="profile">
       <img src="assets/photo.jpg" alt="Hunter Biersdorff" />
       <h1>Hunter Biersdorff</h1>
+      <p> "Succes is not Final, Failure is not fatal; It is the courage to continue that counts" Winston Chruchill
       <p>Welcome to my personal website! I'm a Software Engineer passionate about building great products and solving complex problems. Feel free to browse through my work and learn more about me.</p>
       <a href="resume.html" class="btn">View My Resume</a>
     </div>
