--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
     body {
       font-family: 'Roboto', sans-serif;
-      background: linear-gradient(135deg, #4e73df, #1a73e8);
-      color: #fff;
+      background: #f4f4f4; /* Light gray background */
+      color: #333; /* Dark gray text */
       line-height: 1.6;
     }
 
     h1, h2 {
-      color: #fff;
+      color: #333;
       font-weight: 700;
     }
 
     p {
-      color: rgba(255, 255, 255, 0.8);
+      color: #555; /* Lighter gray for paragraph text */
     }
 
     /* Header Styles */
@@ -34,7 +34,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 2rem 3rem;
-      background: rgba(0, 0, 0, 0.5);
+      background: #333; /* Dark gray background */
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
     }
 
@@ -42,6 +42,7 @@
       font-size: 2.5rem;
       text-transform: uppercase;
       letter-spacing: 2px;
+      color: #fff; /* White text in header */
     }
 
     nav {
@@ -51,13 +52,13 @@
 
     nav a {
       text-decoration: none;
-      color: #fff;
+      color: #fff; /* White links */
       font-weight: 500;
       transition: color 0.3s ease;
     }
 
     nav a:hover {
-      color: #ff6b6b;
+      color: #ddd; /* Light gray on hover */
     }
 
     /* Main Section Styles */
@@ -69,7 +70,7 @@
       height: 100vh;
       text-align: center;
       padding: 2rem;
-      color: #fff;
+      color: #333;
     }
 
     .profile {
@@ -107,8 +108,8 @@
       font-style: italic;
       margin: 3rem 0;
       padding: 2rem;
-      background: rgba(255, 255, 255, 0.1);
-      border-left: 5px solid #ff6b6b;
+      background: #e0e0e0; /* Light gray background */
+      border-left: 5px solid #333; /* Dark gray left border */
       text-align: center;
       max-width: 800px;
       margin-left: auto;
@@ -121,13 +122,13 @@
 
     blockquote footer {
       font-size: 1rem;
-      color: rgba(255, 255, 255, 0.8);
+      color: #777; /* Lighter gray for the author's name */
     }
 
     .btn {
       padding: 12px 30px;
       font-size: 1rem;
-      background-color: #ff6b6b;
+      background-color: #555; /* Mid-gray button */
       color: #fff;
       text-decoration: none;
       border-radius: 5px;
@@ -135,13 +136,13 @@
     }
 
     .btn:hover {
-      background-color: #ff4d4d;
+      background-color: #333; /* Darker gray on hover */
     }
 
     .about-link {
       margin-top: 2rem;
       font-size: 1.1rem;
-      color: #ff6b6b;
+      color: #555;
     }
 
     .about-link:hover {
@@ -150,7 +151,7 @@
 
     /* Footer Styles */
     footer {
-      background-color: rgba(0, 0, 0, 0.7);
+      background-color: #333; /* Dark gray background */
       color: #fff;
       text-align: center;
       padding: 1rem;
@@ -158,7 +159,7 @@
     }
 
     footer a {
-      color: #ff6b6b;
+      color: #ddd; /* Light gray footer link */
       text-decoration: none;
     }
 
