--- a/resume.html
+++ b/resume.html
@@ -13,76 +13,77 @@
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background-color: #ffffff;
+      font-family: 'Roboto', sans-serif;
+      background: #f4f4f4; /* Light gray background */
       color: #333;
       line-height: 1.6;
     }
 
-    /* Header and Navigation */
+    /* Header Styles */
     header {
-      background-color: #ffffff;
-      padding: 2rem 1rem;
-      text-align: center;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 2rem 3rem;
+      background: #333; /* Dark gray background */
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
     }
 
     header h1 {
       font-size: 2.5rem;
-      font-weight: 700;
-      color: #1d1d1f;
-      margin-bottom: 1rem;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      color: #fff; /* White text in header */
     }
 
     nav {
-      margin-top: 1rem;
+      display: flex;
+      gap: 1rem;
     }
 
     nav a {
-      margin: 0 1rem;
       text-decoration: none;
-      color: #1d1d1f;
+      color: #fff; /* White links */
       font-weight: 500;
-      padding-bottom: 2px;
-      border-bottom: 2px solid transparent;
-      transition: border-color 0.3s ease;
+      transition: color 0.3s ease;
     }
 
     nav a:hover {
-      border-color: #0071e3;
+      color: #ddd; /* Light gray on hover */
     }
 
-    /* Main Section Styles */
-    main {
-      max-width: 1200px;
+    /* Resume Section Styles */
+    .resume-container {
+      max-width: 1200px; /* Larger width for the resume viewer */
       margin: 2rem auto;
-      padding: 0 2rem;
-      text-align: center;
+      background: #fff; /* White background for clean design */
+      border-radius: 10px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      padding: 2rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: calc(100vh - 100px); /* Occupy most of the viewport */
+      overflow: hidden;
     }
 
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: #0071e3;
+    .pdf-viewer {
+      width: 100%;
+      height: 100%;
+      border: none;
     }
 
-    .resume-content {
-      max-width: 900px;
-      margin: 3rem auto;
-      text-align: center;
-    }
-
-    /* Footer */
+    /* Footer Styles */
     footer {
+      background-color: #333; /* Dark gray footer */
+      color: #fff;
       text-align: center;
+      padding: 1rem;
       font-size: 1rem;
-      color: #888;
-      padding: 2rem 1rem;
-      background-color: #f9f9f9;
     }
 
     footer a {
-      color: #0071e3;
+      color: #ddd;
       text-decoration: none;
     }
 
@@ -90,52 +91,54 @@
       text-decoration: underline;
     }
 
-    /* Responsive Design */
+    /* Mobile Responsive */
     @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        padding: 1rem;
+      }
+
       header h1 {
         font-size: 2rem;
       }
 
-      nav a {
-        margin: 0 0.5rem;
+      .resume-container {
+        padding: 1rem;
       }
 
-      main {
-        padding: 0 1rem;
+      .pdf-viewer {
+        width: 100%;
+        height: 80vh;
       }
     }
   </style>
 </head>
 <body>
+
+  <!-- Header Section -->
   <header>
-    <h1>My Resume</h1>
+    <h1>Hunter Biersdorff</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="projects.html">Projects</a>
+      <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
 
-  <main>
-    <div class="resume-content">
-      <h2>Download or View My Resume</h2>
-      
-      <!-- Download Link for Resume -->
-      <a href="Assets/Biersdorff.Hunter.pdf" download class="btn" style="font-size: 1.1rem; text-decoration: none; background-color: #0071e3; color: white; padding: 10px 20px; border-radius: 5px;">Download My Resume</a>
+  <!-- Resume Viewer Section -->
+  <div class="resume-container">
+    <!-- Embed PDF Resume -->
+    <iframe class="pdf-viewer" src="assets/Biersdorff.Hunter.pdf" type="application/pdf" width="100%" height="100%">
+      Your browser does not support PDF viewing. Please <a href="assets/Biersdorff.Hunter.pdf" download>download the resume</a>.
+    </iframe>
+  </div>
 
-      <br><br>
-
-      <!-- Embed PDF Resume -->
-      <h3>View My Resume Below:</h3>
-      <iframe src="Assets/Biersdorff.Hunter.pdf" width="100%" height="600px">
-        This browser does not support PDF viewing. Please <a href="Assets/Biersdorff.Hunter.pdf" download>download the resume</a> instead.
-      </iframe>
-    </div>
-  </main>
-
+  <!-- Footer Section -->
   <footer>
     <p>© 2025 Hunter Biersdorff | <a href="mailto:hunterbiersdorff@gmail.com">Email me</a></p>
   </footer>
+
 </body>
 </html>
