--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </blockquote>
 
     <div class="profile">
-      <img src="assets/photo.jpg" alt="Hunter Biersdorff" />
+      <img src="Assets/IMG_1805.JPEG" alt="Hunter Biersdorff" />
       <h1>Hunter Biersdorff</h1>
       <p>Welcome to my personal portfolio! I am a passionate Software Engineer with a knack for problem-solving and creating impactful solutions. I specialize in web development and enjoy building user-friendly applications. Explore my work and get to know me better!</p>
       <a href="resume.html" class="btn">View My Resume</a>
