--- a/index.html
+++ b/index.html
@@ -119,15 +119,6 @@
     .quote-box span {
       font-weight: bold;
     }
-  </style>
-</head>
-<body>
-    }
-
-    blockquote footer {
-      font-size: 1rem;
-      color: #777; /* Lighter gray for the author's name */
-    }
 
     .btn {
       padding: 12px 30px;
@@ -193,6 +184,7 @@
   </style>
 </head>
 <body>
+
   <header>
     <h1>Hunter Biersdorff</h1>
     <nav>
@@ -206,10 +198,10 @@
 
   <main>
     <!-- Fancy Quote Section -->
-    <blockquote>
+    <div class="quote-box">
       <p>"Success is not Final, Failure is not fatal; It is the courage to continue that counts."</p>
       <footer>- Winston Churchill</footer>
-    </blockquote>
+    </div>
 
     <div class="profile">
       <img src="Assets/IMG_1805.JPEG" alt="Hunter Biersdorff" />
@@ -223,5 +215,6 @@
   <footer>
     <p>© 2025 Hunter Biersdorff | <a href="mailto:hunterbiersdorff@gmail.com">Email me</a></p>
   </footer>
+
 </body>
 </html>
