--- a/resume.html
+++ b/resume.html
@@ -130,8 +130,8 @@
   <!-- Resume Viewer Section -->
   <div class="resume-container">
     <!-- Embed PDF Resume -->
-    <iframe class="pdf-viewer" src="assets/Biersdorff.Hunter.pdf" type="application/pdf" width="100%" height="100%">
-      Your browser does not support PDF viewing. Please <a href="assets/Biersdorff.Hunter.pdf" download>download the resume</a>.
+    <iframe class="pdf-viewer" src="Assets/Biersdorff.Hunter.pdf" type="application/pdf" width="100%" height="100%">
+      Your browser does not support PDF viewing. Please <a href="Assets/Biersdorff.Hunter.pdf" download>download the resume</a>.
     </iframe>
   </div>
 
