--- a/projects.html
+++ b/projects.html
@@ -30,12 +30,32 @@
     <div class="card">
       <h2>Triage Bot</h2>
       <p>An automated tool that filters and tags support tickets using simple rule logic. Created in JavaScript with ServiceNow API integrations.</p>
-      <a class="button" href="https://github.com/YOURUSERNAME/project-1" target="_blank">View on GitHub</a>
+      <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Exoplanets" target="_blank">View on GitHub</a>
     </div>
     <div class="card">
       <h2>Support Metrics Dashboard</h2>
       <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
-      <a class="button" href="https://github.com/YOURUSERNAME/project-2" target="_blank">View on GitHub</a>
+      <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
+    </div>
+     <div class="card">
+      <h2>Support Metrics Dashboard</h2>
+      <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
+      <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Legendre%20Polynomials" target="_blank">View on GitHub</a>
+    </div>
+     <div class="card">
+      <h2>Support Metrics Dashboard</h2>
+      <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
+      <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Roll%20of%20the%20di" target="_blank">View on GitHub</a>
+    </div>
+     <div class="card">
+      <h2>Support Metrics Dashboard</h2>
+      <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
+      <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
+    </div>
+     <div class="card">
+      <h2>Support Metrics Dashboard</h2>
+      <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
+      <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
     </div>
   </main>
   <footer>
