--- a/projects.html
+++ b/projects.html
@@ -28,32 +28,32 @@
   </header>
   <main>
     <div class="card">
-      <h2>Triage Bot</h2>
+      <h2>Exoplanets</h2>
       <p>An automated tool that filters and tags support tickets using simple rule logic. Created in JavaScript with ServiceNow API integrations.</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Exoplanets" target="_blank">View on GitHub</a>
     </div>
     <div class="card">
-      <h2>Support Metrics Dashboard</h2>
+      <h2>Basic Graphing</h2>
       <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
     </div>
      <div class="card">
-      <h2>Support Metrics Dashboard</h2>
-      <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
+      <h2>Legendre Polynomial with graph</h2>
+      <p>A Graphical representaiton of Legendre Polynomials. Legendre Polynomials are a system of complete and orthoganl polynomials that havbe a wide number of mathematical properties and applications.  </p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Legendre%20Polynomials" target="_blank">View on GitHub</a>
     </div>
      <div class="card">
-      <h2>Support Metrics Dashboard</h2>
-      <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
+      <h2>Roll of the DI</h2>
+      <p>Python code to simulate the rolling of dice</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Roll%20of%20the%20di" target="_blank">View on GitHub</a>
     </div>
      <div class="card">
-      <h2>Support Metrics Dashboard</h2>
+      <h2>Place Holder</h2>
       <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
     </div>
      <div class="card">
-      <h2>Support Metrics Dashboard</h2>
+      <h2>SPlace Holder</h2>
       <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
     </div>
