--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
 
     body {
-      font-family: 'Roboto', sans-serif;
+      font-family: 'serif', sans-serif;
       background: #f4f4f4; /* Light gray background */
       color: #333; /* Dark gray text */
       line-height: 1.6;
