--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       font-family: 'serif', sans-serif;
       background: #f4f4f4; /* Light gray background */
       color: #333; /* Dark gray text */
-      line-height: 1.6;
+      line-height: 1.5;
     }
 
     h1, h2 {
       color: #333;
-      font-weight: 700;
+      font-weight: 750;
     }
 
     p {
@@ -101,35 +101,6 @@
       margin: 0 auto;
     }
 
-    /* Fancy Quote Styles */
-    .quote-box {
-      background-color: #444;  /* Slightly lighter background for the box */
-      color: #fff;
-      font-style: italic;      /* Make the font italic */
-      font-family: 'Cursive', sans-serif; /* Cursive style font */
-      padding: 20px;
-      border-radius: 10px;
-      margin-top: 30px;
-      display: inline-block;   /* Makes the box fit content */
-      max-width: 80%;         /* Makes the box responsive */
-      text-align: center;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  /* Adds a shadow for depth */
-    }
-
-    .quote-box span {
-      font-weight: bold;
-    }
-
-    .btn {
-      padding: 12px 30px;
-      font-size: 1rem;
-      background-color: #555; /* Mid-gray button */
-      color: #fff;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-    }
-
     .btn:hover {
       background-color: #333; /* Darker gray on hover */
     }
@@ -199,7 +170,7 @@
     <div class="profile">
       <img src="Assets/IMG_1805.JPEG" alt="Hunter Biersdorff" />
       <h1>Hunter Biersdorff</h1>
-      <p>Welcome to my personal portfolio! I am a passionate Software Engineer with a knack for problem-solving and creating impactful solutions. I specialize in web development and enjoy building user-friendly applications. Explore my work and get to know me better!</p>
+      <p>Welcome to my personal portfolio! Hi, I’m a data center technician with a bachelor’s in physics and a strong interest in transitioning into development or data analysis. While my formal experience is rooted in managing physical infrastructure and troubleshooting at the data center level, I’ve built a strong foundation in analytical thinking and technical systems. I’m now actively learning coding and data tools to bridge into software or analytics, and I’m excited to grow in a role where I can bring curiosity, discipline, and a fresh perspective to solving problems.</p>
       <a href="resume.html" class="btn">View My Resume</a>
       <a href="about.html" class="about-link">Learn more about me</a>
     </div>
