--- a/projects.html
+++ b/projects.html
@@ -29,12 +29,12 @@
   <main>
     <div class="card">
       <h2>Exoplanets</h2>
-      <p>An automated tool that filters and tags support tickets using simple rule logic. Created in JavaScript with ServiceNow API integrations.</p>
+      <p>A model of exoplanets that aims to find the semi major axis and astronomical unit for planets. </p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Exoplanets" target="_blank">View on GitHub</a>
     </div>
     <div class="card">
       <h2>Basic Graphing</h2>
-      <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
+      <p>Simply learning to create graphical representations. This was the first step on my journey of displaying data.</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
     </div>
      <div class="card">
