--- a/projects.html
+++ b/projects.html
@@ -49,12 +49,12 @@
     </div>
      <div class="card">
       <h2>Place Holder</h2>
-      <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
+      <p>Description</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
     </div>
      <div class="card">
       <h2>SPlace Holder</h2>
-      <p>A clean visual dashboard displaying real-time support stats built using Chart.js, HTML, and RESTful endpoints.</p>
+      <p>Description</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
     </div>
   </main>
