--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div class="profile">
       <img src="Assets/IMG_1805.JPEG" alt="Hunter Biersdorff" />
       <h1>Hunter Biersdorff</h1>
-      <p>Welcome to my personal portfolio! Hi, I’m a data center technician with a bachelor’s in physics and a strong interest in transitioning into development or data analysis. While my formal experience is rooted in managing physical infrastructure and troubleshooting at the data center level, I’ve built a strong foundation in analytical thinking and technical systems. I’m now actively learning coding and data tools to bridge into software or analytics, and I’m excited to grow in a role where I can bring curiosity, discipline, and a fresh perspective to solving problems.</p>
+      <p>Welcome to my personal portfolio! I’m a data center technician with a Bachelor’s in physics and a strong interest in transitioning into development or data analysis. While my formal experience is rooted in managing physical infrastructure and troubleshooting at the data center level, I’ve built a strong foundation in analytical thinking and technical systems. I’m now actively learning coding and data tools to bridge into software or analytics, and I’m excited to grow in a role where I can bring curiosity, discipline, and a fresh perspective to solving problems.</p>
       <a href="resume.html" class="btn">View My Resume</a>
       <a href="about.html" class="about-link">Learn more about me</a>
     </div>
